--- a/AccidentAnalysis/Project_AccidentAnalysis.ipynb
+++ b/AccidentAnalysis/Project_AccidentAnalysis.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "In this capstone we are going to solve the problem of finding the severity of the accident based on the weather condition or lighting some other conditions which can lead to accident. In this capstone we will also try to predict the probability of the accident which can be avoided people travelling on the road.\n",
-    "Background of this project is to find the causes of the accident and if we can figure out way to predict an accident and thereby saving precious lives.\n"
+    "Background of this project is to find the causes of the accident and if we can figure out way to predict an accident and thereby saving precious lives. This predection will help not only the commutors to be alert while driving, it can be used by traffic mamagement officials to flash \n",
+    "\n"
    ]
   },
   {
