--- a/AccidentAnalysis/Project_AccidentAnalysis.ipynb
+++ b/AccidentAnalysis/Project_AccidentAnalysis.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "In this capstone we are going to solve the problem of finding the severity of the accident based on the weather condition or lighting some other conditions which can lead to accident. In this capstone we will also try to predict the probability of the accident which can be avoided people travelling on the road.\n",
-    "Background of this project is to find the causes of the accident and if we can figure out way to predict an accident and thereby saving precious lives. This predection will help not only the commutors to be alert while driving, it can be used by traffic mamagement officials to flash \n",
+    "\n",
+    "Background of this project is to find the causes of the accident and if we can figure out way to predict an accident and thereby saving precious lives. This predection will help not only the commutors to be alert while driving, it can be used by traffic management officials to flash important messages using billboards. \n",
     "\n"
    ]
   },
@@ -28,6 +29,7 @@
    "metadata": {},
    "source": [
     "In this captain we are going to use the data which is available in this site which contains the various attributes of each accident. there are 37 attributes for each accident. In this the most important one is the security code which is what we have to predict Based on other attributes . Some of the attributes which we Can use our location of the accident, lighting conditions, road conditions, Weather conditions, speed of the vehicle etc \n",
+    "\n",
     "We can create a model Which will predict of accident and also the probability and train the model using training data and then further test it with test data which will be a portion of the current data which we have.  \n"
    ]
   },
