--- a/AccidentAnalysis/Project_AccidentAnalysis.ipynb
+++ b/AccidentAnalysis/Project_AccidentAnalysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Description of the problem "
+    "# Introduction"
    ]
   },
   {
@@ -21,14 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Description of the data "
+    "# Data Description"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this captain we are going to use the data which is available in this site which contains the various attributes of each accident. there are 37 attributes for each accident. In this the most important one is the security code which is what we have to predict Based on other attributes . Some of the attributes which we Can use our location of the accident, lighting conditions, road conditions, Weather conditions, speed of the vehicle etc \n",
+    "In this capstone we are going to use the data which is available in this site which contains the various attributes of each accident. there are 37 attributes for each accident. In this the most important one is the security code which is what we have to predict Based on other attributes . Some of the attributes which we Can use our location of the accident, lighting conditions, road conditions, Weather conditions, speed of the vehicle etc \n",
     "\n",
     "We can create a model Which will predict of accident and also the probability and train the model using training data and then further test it with test data which will be a portion of the current data which we have.  \n"
    ]
