--- a/AccidentAnalysis/Project_AccidentAnalysis.ipynb
+++ b/AccidentAnalysis/Project_AccidentAnalysis.ipynb
@@ -30,7 +30,12 @@
    "source": [
     "In this capstone we are going to use the data which is available in this site which contains the various attributes of each accident. there are 37 attributes for each accident. In this the most important one is the security code which is what we have to predict Based on other attributes . Some of the attributes which we Can use our location of the accident, lighting conditions, road conditions, Weather conditions, speed of the vehicle etc \n",
     "\n",
-    "We can create a model Which will predict of accident and also the probability and train the model using training data and then further test it with test data which will be a portion of the current data which we have.  \n"
+    "We can create a model Which will predict of accident and also the probability and train the model using training data and then further test it with test data which will be a portion of the current data which we have. \n",
+    "\n",
+    "After having a quick look at the data we can see that most of the accidents are either of severity code 2 or 1. For severity code 2, hey which is an injury most of the accident are happening at the intersection so this is also be a key factor 2 predict an accident.\n",
+    "\n",
+    "Also we can see that most of the accident at least 50% are happening when they weather condition is not clear. So as you we can have a insight in the current data and predict the severity of the accident  \n",
+    "\n"
    ]
   },
   {
